Updated SPIMI alg for better efficiency